--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,5 @@
     { "src": "api/index.go", "use": "@vercel/go" },
     { "src": "public/**", "use": "@vercel/static" }
   ],
-  "routes": [
-    { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/api/index.go" }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/api/index.go" }]
 }
